# ai-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adk_config.h.in
cmake/: aarch64-linux-gnu.cmake  cross-compile.cmake
cmake/toolchains/: x86_64_nvidia_gnu.toolchain
config/: calibration_images.txt  wget-log
config/yolov5-6.0/: yolov5s-calibration.table
docker/: Dockerfile  Dockerfile.cv  Dockerfile.tf1  Dockerfile.trt
docs/: algorithm.md  design.md  structure.md
docs/graph/: graph.drawio  logic.drawio  private.drawio
docs/pmp/: algorithm.md  architecture.md  awesome.md  env.md  product.md  structure.md
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  detection.cpp
include/: Logger.h  adk_config.h  edk_config.h
python/alg/: sort.py
python/alg/bm/: final.py
python/alg/cv/: vision.py
python/alg/cv/clasification/: alexnet.py  class_indices.json  densenet.py  googlenet.py  lenet.py  lenet5.py  mobilenet_v2.py  nasnet.py  shufflenet.py  swint.py  vgg.py  vit.py
python/alg/cv/detection/: vision.py
python/alg/cv/detection/detr/: matcher.py
python/alg/cv/detection/faster_rcnn/: README.md  results20250528-145754.txt
python/alg/cv/detection/rcnn/: fast_rcnn.py  faster_rcnn.py  rcnn.py
python/alg/cv/detection/yolo/: train.py  yolov1.py  yolov2.py
python/alg/cv/detection/yolo/models/: retinanet.py  ssd300.py  yolov3.py
python/alg/cv/detection/yolo/utils/: yolov3_loss.py
python/alg/cv/extraction/: feature.py
python/alg/cv/keypoint/: mul_movenet.py
python/alg/cv/pose/: single_movenet.py
python/alg/cv/segmentation/: deeplab_v3.py  mask_rcnn.py  unet.py
python/alg/dl/: cnn.py  cnn_torch_gpu.py  conv.py  gan.py  highway.py  loss.py  optimizer.py  transform.py  transformer.py  vae.py
python/alg/heu/: ga.py  tsp_ga.py
python/alg/ml/: k-means.py  linear_regression.py  meanshift.py  pca.py
python/alg/ml/models/: hmm.py
python/alg/ml/reinforcement/: multi_armed_bandit.py
python/alg/ml/semi_supervised/: semi_svm.py
python/alg/ml/supervised/: c45_iris_decision_tree.gv  em.py  id3.py  id3_iris_decision_tree.gv  logistic_regression.py  qp_svm.py  svm.py
python/alg/ml/supervised/ensemble/: C4.5.py  adaboost.py  gdbt.py
python/alg/ml/supervised/nn/: activate.py  active.py  bagging.py  bp_sa.py  elman.py  rbf.py  rbm.py  vocab_cache.pkl  xavier.py
python/alg/ml/unsupervised/: dbscan.py  kpp.py  pca.py
python/alg/nlp/: bert.py  bert_cls.py  bilstm.py  gru.py  lstm.py  n-gram.py  nnlm.py  rnn.py  seq2seq.py  transformer.py  txtcnn.py  word2vect.py
python/alg/opt/: dist_sort.py  search.py
python/dataset/voc/: csv2tfrecord.py  data.py  detect.py  json2xml.py  train_test_split.py  xml_to_csv.py
python/edge/: occlusion.py  vision.py
python/image/: qr.py
python/img/: book_information_er  user_management_er
python/img/edge/: direction.py
python/img/edge/qr/: qr_exe
python/img/edge/strip/: es.py  esg.py
python/img/graph/: fine_payment_er  graph.py
python/img/qr/: 1.tar.xz  2.tar.xz  qr.cpp  qr.py  qr_exe
python/math/algebra/: equation.py  gal.py  gcd.py
python/math/analyze/: bng.py  saddle.py
python/math/arithmetic/: pai.py
python/math/arithmetic/opt/1/: low_rank.py  sparse_optimization.py
python/math/arithmetic/opt/2/: norm.py
python/math/geometry/: ball.py  cone.py  dist.py
python/math/statistics/: mc.py
qt/ai_qt/: ai_qt.pro  mainwindow.cpp  mainwindow.h
qt/build-ai_qt-Desktop-Debug/: Makefile  ai_qt
qt/build-ai_qt-Desktop-Release/: Makefile  ai_qt  moc_mainwindow.cpp
src/: CMakeLists.txt  glogtest  main.cpp  main_test.cpp
src/basic/: basic_module.hpp  frame.h
src/codec/: ai_decode.cpp  ai_decode.h  ai_encode.cpp  ai_encode.h  ai_transform.h  buf_surface.h  buf_surface_util.hpp  decode.cpp  decode.hpp  encode.cpp  encode.hpp  ffmpeg_demuxer.h  framerate_contrller.h  video_decoder.cpp  video_decoder.h  video_parser.cpp  video_parser.h
src/core/: cache.h  data_type.cpp  data_type.h  device.cpp  engine.h  infer_server.cpp  profile.h  request_ctrl.h  session.cpp  session.h
src/framework/: basic_module.hpp  frame.h
src/inference/: ai_async_inference.cpp  ai_async_inference.hpp  ai_sync_inference.cpp  ai_sync_inference.hpp  infer_server.cpp  infer_server.h  processor.h
src/inference/processor/: postprocessor.cpp  predictor.cpp  preprocessor.cpp
src/model/: CMakeLists.txt
src/model/manager/: imodel.h  model.h  model_manager.cpp
src/model/mssd/: CMakeLists.txt  SSDModel.cpp
src/model/trt_yolo/: CMakeLists.txt  class_detector.h
src/module/: basic_module.hpp  frame.h
src/node/: ai_decode_impl.hpp  ai_encode_impl.hpp
src/node/runner/: stream_runner.cpp  stream_runner.h
src/platform/: ai_platform.cpp  ai_platform.h
src/processor/: postprocessor.cpp  predictor.cpp
src/runner/: detection_runner.cpp  detection_runner.h  stream_runner.cpp  stream_runner.h
src/utils/: batcher.h  env.h  osd.cpp  osd.h  thread_pool.cpp  thread_pool.h  threadsafe_queue.h  timer.cpp
unitest/: CMakeLists.txt  main.cpp  test_base.cpp  test_base.h  test_decode.cpp  test_encode.cpp
weights/yolov5-6.0/: yolov5s.cfg
